Diakonos Changelog
------------------

0.8.7

- MRU buffer history added.
- strip_trailing_whitespace_on_save setting added.
- Sessions (named and unnamed) added.
- grep as you type added.
- delete_to added.
- Makefile config added.
- Markdown config added.
- Sass config added.
- find.return_on_abort setting added.
- Now including custom.conf from default diakonos.conf.
- Help files updated.
- Lots of code refactoring done.
- Numerous little adjustments and fixes made.

0.8.6

- Find-as-you-type added.
- Help system added.
- print_mapped_function added.
- User-definable status line variables added.
- :after_open and :after_buffer_switch hooks added.
- Sample script for git branch status variable added.
- comment_out and uncomment functions added.
- comment_string and comment_close_string settings added.
- Added -m (--open-matching) command line argument.
- wrap_paragraph function and wrap_margin setting added for hard wrapping text.
- columnize function and column_delimiter setting added.
- Numerous small fixes, adjustments and refactorings.

0.8.5

- Added 256 colour support.
- Added support for opening files with "filepath:linenumber" syntax.
- Added ability to put %_ in a code closer as the place to position the cursor.
- Code closers can now contain newlines.
- Now closer text is parsed-indented by default.
- Added copy_selection_to_klipper.
- Added cut_selection_to_klipper.
- Added paste_from_klipper.
- Added delete_and_store_line_to_klipper.
- Added delete_to_EOL_to_klipper.
- Added delete_line_to_klipper.
- Added support for regexp match placeholders (\1, \2, etc.) in findAndReplace.
- Added $k shell command variable for klipper contents.
- Added eol_behaviour setting.
- Various minor bug fixes.
- Changed to MIT licence.

0.8.4

- Added joinLines function.
- Added "yes and (s)top" as a find-and-replace option.
- Added '-h' to be synonymous with '--help'.
- Added "Ctrl-Q to quit" to opening message.
- Added close_code feature.
- Added list selection.