@@ -217,6 +217,8 @@ key ctrl+k         deleteAndStoreLine
 key ctrl+alt+k     deleteToEOL
 key ctrl+d t       delete_to
 key ctrl+d ctrl+t  delete_to
+key ctrl+d i       delete_to_and_from
+key ctrl+d ctrl+i  delete_to_and_from
 key esc del        collapseWhitespace
 key esc [ 3 ; 3 ~  collapseWhitespace
 key alt+w          wrap_paragraph
