@@ -8,6 +8,7 @@ Diakonos Changelog
 - Sessions (named and unnamed) added.
 - grep as you type added.
 - delete_to added.
+- delete_to_and_from added.
 - Makefile config added.
 - Markdown config added.
 - Sass config added.
